# GameMath

./: .gitignore  CMakeLists.txt  README.md
Math/: CMakeLists.txt
Math/include/: Angle.hpp  Common.hpp  Matrix4.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
Math/src/: Angle.cpp  Matrix4.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
MathTests/: CMakeLists.txt
MathTests/gamemath-debug-gcc/: CMakeCache.txt  build.ninja  cmake_install.cmake
MathTests/gamemath-debug-gcc/.cmake/api/v1/reply/: cache-v2-a4cb5b1d0a69616cc94f.json  cmakeFiles-v1-5aab0ac0d72307dd0ed2.json  codemodel-v2-5085e2d69e3475985e8a.json  index-2023-05-08T20-39-53-0241.json  target-MathTests-Debug-3389b019e9137f2c5148.json
MathTests/gamemath-release-gcc/: CMakeCache.txt  build.ninja  cmake_install.cmake
MathTests/gamemath-release-gcc/.cmake/api/v1/reply/: cache-v2-05899201ae23b956f043.json  cmakeFiles-v1-922476b3aad9299ed3dd.json  codemodel-v2-d7c7b5b5c19a95b76899.json  index-2023-05-08T20-39-53-0242.json  target-MathTests-Release-d21e9cc241ed6b394b4f.json
MathTests/src/: Main.cpp  MatrixTests.cpp  VectorTests.cpp
